objects/rstk__soamort__c.object
<CustomObject>
    <fields>
        <fullName>Monthly_Schedules_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is checked it indicates that monthly schedule details have been created</description>
        <inlineHelpText>When this checkbox is checked it indicates that monthly schedule details have been created</inlineHelpText>
        <label>Monthly Schedules Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Months_should_have_run__c</fullName>
        <description>How many months elapsed between the start period and today</description>
        <formula>IF(YEAR(TODAY()) = rstk__soamort_startyear__c,
  MONTH(TODAY())+1- rstk__soamort_startmonth__c ,
  ((YEAR(TODAY())-1- rstk__soamort_startyear__c)*12)+12-rstk__soamort_startmonth__c+MONTH(TODAY())
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many months elapsed between the start period and today</inlineHelpText>
        <label>Months should have run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Amortization_Transactions__c</fullName>
        <description>A roll-up summary of all amortization transactions</description>
        <inlineHelpText>A roll-up summary of all amortization transactions</inlineHelpText>
        <label>Number of Amortization Transactions</label>
        <summaryForeignKey>rstk__soamorttxn__c.rstk__soamorttxn_soamort__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>